--- a/css/login.css
+++ b/css/login.css
@@ -6,49 +6,41 @@ body {
 }
 
 body {
-    background-image: url('../images/join_background.png');
+    background-image: url('../images/login_background.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: auto;
     display: flex;
-    align-items: center; /* join 화면 가운데 */
+    align-items: center;
 }
 
-.join-container {
-    width: 900px;
-    height: 600px;
+.login-container {
+    width: 600px;
+    height: 400px;
     background-color: rgba(255, 255, 255, 0.2); /* 배경 반투명 */
     backdrop-filter: blur(15px);    /* background blur */
     box-shadow: 0px 2px 4px gray; /* 그림자 */
     border-radius: 20px;
     margin: 0 auto; /* 요소의 양옆 margin 동일하게 */
-    padding: 35px;
+    padding: 25px;
     display: flex;
     flex-direction: column;
-    row-gap: 65px;
+    row-gap: 40px;
     font-family: Inter;
 }
+
 .text-container {
     display: flex;
     flex-direction: column;
     row-gap: 20px;
     align-items: center;
 }
-
-.join-text,
-.next-text {
+.login-text {
     color: #fff;
     font-weight: 900;
-}
-.join-text {
     font-size: 50px;
 }
-.next-text {
-    font-size: 30px;
-    text-align: right;
-}
-
-.join-container > div {
+.login-container > div {
     color: #888;
     font-size: 15px;
 }
@@ -62,4 +54,14 @@ input {
 }
 input:focus {
     outline: none;  /* input box 클릭 시 테두리 없앰 */
+}
+
+#loginBtn {
+    width: 100px;
+    height: 30px;
+    margin: 0 auto;
+    background-color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 15x;
 }
