--- a/css/reset.css
+++ b/css/reset.css
@@ -1,16 +1,23 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-ul{
+
+body {
+    background-color: #DDE8FF;
+}
+
+ul {
     list-style: none;
 }
-a{
+
+a {
     text-decoration: none;
     color: black;
 }
-img{
+
+img {
     max-width: 100%;
     height: auto;
 }
