--- a/css/home.css
+++ b/css/home.css
@@ -124,8 +124,80 @@ main {
     height: 330px;
 }
 
-.tissue {
+.tissueContainer {
     position: absolute;
-    height: 95px;
     top: -60px;
+}
+
+.tissue {
+    background-color: white;
+    height: 95px;
+    width: 400px;
+    transition: transform 0.5s ease;
+    position: relative;
+}
+
+.tissue.clicked {
+    transform: translateY(40px) scale(1.5);
+    /* 클릭 시 tissue를 밑으로 올리고 확대하는 애니메이션 효과 */
+    width: 380px;
+    height: 310px;
+}
+
+/* 오늘의미션 모달창 */
+.tissue-modal {
+    display: none;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.trashcanContainer h5 {
+    margin-bottom: 20px;
+}
+
+.chks {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.chk {
+    display: flex;
+    font-size: 13px;
+    gap: 3px;
+}
+
+.chks .chk input[type="checkbox"] {
+    width: 16px;
+    height: 16px;
+}
+
+.chk input[type="checkbox"]:checked + label {    /* 체크되었을 때 텍스트 연해짐 */
+    opacity: 0.2;
+}
+
+.timerContainer {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-bottom: 15px;
+    display: flex;
+}
+
+.timer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100px;
+    height: 100px;
+    border-radius: 100px;
+    background-color: #7997FF;
+    box-shadow: inset 0 4px 10px rgba(0, 0, 0, 0.3);
+    cursor: default;
+
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
 }
