--- a/css/home.css
+++ b/css/home.css
@@ -25,8 +25,8 @@ main {
     border-radius: 20px;
     width: 480px;
     height: 500px;
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
-    /* inner shadow */
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    /* drop-shadow */
     backdrop-filter: blur(5px);
     /* 배경만 흐리게 처리 */
     position: relative;
@@ -38,7 +38,7 @@ main {
 
 }
 
-.modalContainer h3 {
+.modalContainer h2 {
     display: flex;
     justify-content: center;
     margin-top: 20px;
@@ -65,16 +65,17 @@ main {
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.3);
     color: white;
     font-size: 20px;
-    width: 100px;
     height: 50px;
     cursor: pointer;
 }
 
 .challenge button {
+    width: 130px;
     background-color: #7997FF;
 }
 
 .challenge-type button {
+    width: 100px;
     background-color: #C9D5FF;
 }
 
@@ -102,6 +103,7 @@ main {
 .modalContainer p {
     font-size: 15px;
     color: #777777;
+    font-weight: bold;
 
     position: absolute;
     bottom: 0;
@@ -151,7 +153,7 @@ main {
     padding: 20px;
 }
 
-.trashcanContainer h5 {
+.trashcanContainer h4 {
     margin-bottom: 20px;
 }
 
