--- a/css/header.css
+++ b/css/header.css
@@ -3,6 +3,9 @@
 header {
     display: flex;
     justify-content: flex-end;
+    top: 0;
+    right: 0;
+    left: 0;
     height: 80px;
 }
 .logo {
