모달창 연결부분 구현

--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 main {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 88vh;
+    font-family: Inter;
 }
 
 /* 미션선택 모달창 */
