--- a/css/trash.css
+++ b/css/trash.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 .trash-can,
 .score,
 .target {
@@ -8,7 +10,7 @@
 
 .trash-can {
     margin: 5% 0 0 0;
-    position: relative;
+    position: relative; 
     overflow: hidden;
 }
 
@@ -35,25 +37,29 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    /* background-color: white; */
+    background-color: rgba(255, 255, 255, 0.2);
     padding: 30px;
     border-radius: 10px;
     z-index: 1000;
     text-align: center;
 
     width: 30%;
-    height: 20%;
-    opacity: 0.5;
+    height: 312px;
+    /* opacity: 0.2; */
 }
 
 .popup p {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
+    font-size: 4rem;
+    font-weight: bold;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .popup button {
-    background-color: blue;
+    background-color: #5772FF;
     font-size: 1.5rem;
+    font-weight: bold;
     color: white;
     padding: 10px 20px;
     border: none;
