mypage 페이지 간격 수정

--- a/css/mypage.css
+++ b/css/mypage.css
@@ -35,6 +35,8 @@ hr {
 
 /* 밑에만 스크롤 되게 설정 */
 .certificates-item {
+    align-items: center;
+
     overflow-y: scroll;
     width: 100%;
     height: 530px;
