--- a/css/mypage.css
+++ b/css/mypage.css
@@ -66,7 +66,7 @@ li:first-child {
 
 /* 마지막 요소 오른쪽 간격 제거 */
 li:last-child {
-    margin-right: 0;
+    margin-right: 7%;
 }
 
 .cer-box {
@@ -95,7 +95,7 @@ li:last-child {
 
 .cer-content,
 .cer-target {
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 .cer-target {
