--- a/css/mypage.css
+++ b/css/mypage.css
@@ -26,11 +26,11 @@
 }
 
 hr {
-    width: 85%;
+    width: 80%;
     height: 1px;
     border: 0;
     background: white;
-    margin-left: 7%;
+    margin-left: 10%;
 }
 
 /* 밑에만 스크롤 되게 설정 */
@@ -56,17 +56,17 @@ ul {
 
 /* 사이 간격 설정 */
 li {
-    margin-right: 5.5%;
+    margin-right: 3%;
 }
 
 /* 첫번째 요소 왼쪽 간격 고정 */
 li:first-child {
-    margin-left: 7%; 
+    margin-left: 10%; 
 }
 
 /* 마지막 요소 오른쪽 간격 제거 */
 li:last-child {
-    margin-right: 7%;
+    margin-right: 0;
 }
 
 .cer-box {
@@ -76,8 +76,8 @@ li:last-child {
     background-color: white;
 
     margin-top: 10%;
-    margin-bottom: 10%;
-    padding: 3%;
+    margin-bottom: 3%;
+    /* padding: 3%; */
 }
 
 .cer-title,
@@ -102,7 +102,7 @@ li:last-child {
     color: blue;
 }
 
-.cer-date {
+/* .cer-date {
     display: flex;
     text-align: right;
     justify-content: right;
@@ -111,4 +111,4 @@ li:last-child {
     margin-right: 2%;
 
     color: gray;
-}
+} */
