--- a/css/mypage.css
+++ b/css/mypage.css
@@ -56,7 +56,7 @@ ul {
 
 /* 사이 간격 설정 */
 li {
-    margin-right: 3%;
+    margin-right: 6%;
 }
 
 /* 첫번째 요소 왼쪽 간격 고정 */
@@ -66,11 +66,12 @@ li:first-child {
 
 /* 마지막 요소 오른쪽 간격 제거 */
 li:last-child {
+    /* z-index: 100; */
     margin-right: 0;
 }
 
 .cer-box {
-    width: 47vh;
+    width: 50vh;
     height: 25vh;
     border-radius: 20px;
     background-color: white;
@@ -89,7 +90,7 @@ li:last-child {
 }
 
 .cer-title {
-    font-size: 2rem;
+    font-size: 30px;
     padding: 3% 0;
 }
 
