--- a/css/mypage.css
+++ b/css/mypage.css
@@ -2,8 +2,8 @@
 
 .profile {
     margin: 0 auto;
-    width: 20vh;
-    height: 20vh;
+    width: 200px;
+    height: 200px;
     border: 1px solid white;
     border-radius: 50%;
 }
@@ -15,13 +15,13 @@
 }
 
 .bi-emoji-smile {
-    font-size: 14vh;
+    font-size: 140px;
     padding: 15%;
 }
 
 .name {
     text-align: center;
-    font-size: 4vh;
+    font-size: 40px;
     margin: 1%;
 }
 
@@ -71,13 +71,13 @@ li:last-child {
 }
 
 .cer-box {
-    width: 50vh;
-    height: 25vh;
+    width: 450px;
+    height: 200px;
     border-radius: 20px;
     background-color: white;
 
     margin-top: 10%;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
     /* padding: 3%; */
 }
 
