--- a/css/mypage.css
+++ b/css/mypage.css
@@ -1,22 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 .profile {
-    margin: 0 auto;
-    width: 20vh;
-    height: 20vh;
+    /* margin: 0 auto; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 150px;
     border: 1px solid white;
-    border-radius: 50%;
+    border-radius: 100px;
 }
 
 .info {
-    margin: 0 auto;
-    padding: 3%;
-    max-width: 1170px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 30px;
+    /* margin: 0 auto; */
+    /* max-width: 1170px; */
 }
 
 .bi-emoji-smile {
-    font-size: 14vh;
-    padding: 29px;
+    font-size: 90px;
+    padding: 30px;
 }
 
 .name {
