--- a/css/mypage.css
+++ b/css/mypage.css
@@ -1,36 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 .profile {
-    margin: 0 auto;
-    width: 20vh;
-    height: 20vh;
+    /* margin: 0 auto; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 150px;
     border: 1px solid white;
-    border-radius: 50%;
+    border-radius: 100px;
 }
 
 .info {
-    margin: 0 auto;
-    padding: 3%;
-    max-width: 1170px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 30px;
+    /* margin: 0 auto; */
+    /* max-width: 1170px; */
 }
 
 .bi-emoji-smile {
-    font-size: 14vh;
-    padding: 29px;
+    font-size: 90px;
+    padding: 30px;
 }
 
 .name {
     text-align: center;
     font-size: 4vh;
     margin: 1%;
+    margin-bottom: 50px;
 }
 
 hr {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     width: 85%;
     height: 1px;
     border: 0;
     background: white;
-    margin-left: 7%;
+    margin-left: 7.5%;
 }
 
 /* 밑에만 스크롤 되게 설정 */
@@ -54,7 +65,7 @@ ul {
 
 /* 사이 간격 설정 */
 li {
-    margin-right: 5.5%;
+    margin-right: 6%;
 }
 
 /* 첫번째 요소 왼쪽 간격 고정 */
