mypage 수료증 간격 및 위치 수정

--- a/css/mypage.css
+++ b/css/mypage.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+body {
+    width: 100%;
+    height: 100%;
+}
+
 .profile {
-    /* margin: 0 auto; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,8 +20,6 @@
     align-items: center;
     flex-direction: column;
     padding-top: 30px;
-    /* margin: 0 auto; */
-    /* max-width: 1170px; */
 }
 
 .bi-emoji-smile {
@@ -27,53 +29,121 @@
 
 .name {
     text-align: center;
-    font-size: 4vh;
-    margin: 1%;
-    margin-bottom: 50px;
+    font-size: 35px;
+    margin-top: 18px;
+    margin-bottom: 55px;
 }
 
-hr {
+.hr-container {
     display: flex;
     align-items: center;
     justify-content: center;
+}
 
-    width: 85%;
+hr {
+    width: 1300px;
     height: 1px;
     border: 0;
     background: white;
-    margin-left: 7.5%;
 }
 
 /* 밑에만 스크롤 되게 설정 */
-.certificates-item {
+#certificates-item {
     overflow-y: scroll;
     width: 100%;
     height: 530px;
 }
 
-/* 스크롤바 숨김 */
-.certificates-item::-webkit-scrollbar {
+/* 스크롤바 숨김*/
+#certificates-item::-webkit-scrollbar {
     display: none;
 }
 
-/* 한 줄에 3개씩 가로배치되게 설정 */
+#cer-box-container div {
+    display: block;
+}
+
+/* .cer-box {
+    width: 400px;
+    height: 200px;
+    border-radius: 20px;
+    background-color: white;
+
+    float: left;
+    
+    margin: 45px 50px 0 0;
+    /* padding: 50px;
+} */
+
+/* .cer-box {
+    width: calc(33.33% - 40px); /* 한 줄에 3개씩 배치하므로 전체 너비의 33.33%로 설정하고 간격을 제외한 크기로 조정합니다. 
+    height: 200px;
+    border-radius: 20px;
+    background-color: white;
+    margin: 45px 20px 0 20px; /* 좌우 여백을 조정합니다. 
+    box-sizing: border-box; /* 박스 크기를 내부 여백과 테두리를 포함하여 계산합니다. 
+    float: left; /* 왼쪽으로 띄웁니다. 
+} */
+
+.cer-box {
+    width: calc((100% - 140px - 100px) / 3);
+    height: 200px;
+    border-radius: 20px;
+    background-color: white;
+    margin: 45px 25px 0 25px;
+    float: left;
+    box-sizing: border-box;
+}
+
+.cer-box:first-child {
+    margin-left: 70px;
+}
+
+.cer-box:last-child {
+    margin-right: 70px;
+}
+
+p {
+    text-align: center;
+}
+
+.cer-title {
+    font-size: 20px;
+    padding-top: 20px;
+    padding-bottom: 43px;
+}
+
+.cer-content,
+.cer-target {
+    font-size: 15px;
+}
+
+.cer-content {
+    padding-bottom: 10px;
+}
+
+.cer-target {
+    color: blue;
+}
+
+/* 한 줄에 3개씩 가로배치되게 설정
 ul {
     list-style: none;
     padding: 0;
     display: flex;
 }
 
-/* 사이 간격 설정 */
+/* 사이 간격 설정
 li {
     margin-right: 8%;
 }
 
-/* 첫번째 요소 왼쪽 간격 고정 */
+/* 첫번째 요소 왼쪽 간격 고정
 li:first-child {
     margin-left: 7%; 
 }
 
-/* 마지막 요소 오른쪽 간격 제거 */
+/* 마지막 요소 오른쪽 간격 제거 
 li:last-child {
     margin-right: 0;
 }
@@ -109,19 +179,4 @@ li:last-child {
 
 .cer-target {
     color: blue;
-}
-
-.cer-date {
-    display: flex;
-    text-align: right;
-    justify-content: right;
-
-    margin-top: -3%;
-    margin-right: 2%;
-
-    color: gray;
-}
-
-@media screen and (max-width : 1497px) {
-    
-}
+} */
