--- a/css/mypage.css
+++ b/css/mypage.css
@@ -59,31 +59,38 @@ hr {
     display: none;
 }
 
-#cer-box-container {
+.cer-box-container {
     max-width: 1300px;
 
     margin: 0 auto;
     text-align: center;
+    display: flex;
+    gap: 50px;
 }
+
+/* .cer-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 400px;
+    height: 200px;
+    border-radius: 20px;
+    background-color: white;
+    margin: 45px 25px 0 25px;
+    float: left;
+    box-sizing: border-box;
+} */
 
 .cer-box {
     width: 400px;
     height: 200px;
     border-radius: 20px;
     background-color: white;
-    margin: 45px 25px 0 25px;
-    /* float: left; */
-    /* box-sizing: border-box; */
     box-sizing: border-box;
     display: inline-block;
-}
 
-.cer-box:first-child {
-    margin-left: 70px;
-}
-
-.cer-box:last-child {
-    margin-right: 70px;
+    margin: 50px 0 0 0;
 }
 
 p {
@@ -93,7 +100,7 @@ p {
 .cer-title {
     font-size: 20px;
     padding-top: 20px;
-    padding-bottom: 43px;
+    padding-bottom: 35px;
 }
 
 .cer-content,
